--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@ body {
 	background-color: white;
 	margin: 0;
 	padding: 0;
-	background: url('../images/bk2.jpg') no-repeat center center fixed;
+	background: url('../images/bk.jpg') no-repeat center center fixed;
 	background-size: cover;
 }
 
