--- a/css/styles.css
+++ b/css/styles.css
@@ -82,8 +82,9 @@ li {
 	padding-top: 25px;
 }
 .linkbox {
-	height: 100px;
-	border-radius: 3px;
+	height: 150px;
+	width: 150px;
+	border-radius: 150px;
 	opacity: 0.85;
 }
 a:hover .linkbox {
