--- a/css/styles.css
+++ b/css/styles.css
@@ -205,12 +205,13 @@ li.social-tab:hover:after {
 	}
 	.left-block:after {
 		width: 100%;
+		height: 350px;
 		-webkit-transform-origin: 0 100%;
-	    -ms-transform-origin: 0 100%;
-	    transform-origin: 0 100%;
-	    -webkit-transform: skewY(-10deg);
-	    -ms-transform: skewY(-10deg);
-	    transform: skewY(-10deg);
+		-ms-transform-origin: 0 100%;
+		transform-origin: 0 100%;
+		-webkit-transform: skewY(-10deg);
+		-ms-transform: skewY(-10deg);
+		transform: skewY(-10deg);
 	}
 	.content-body {
 	    display: block;
