--- a/css/styles.css
+++ b/css/styles.css
@@ -104,11 +104,11 @@ a:hover .linkbox {
 .rh {
 	background: url('../images/thumb-rh.jpg');
 }
-.lxr {
-	background: url('../images/thumb-lxr.jpg');
+.LXR {
+	background: url('../images/thumb-LXR.jpg');
 }
-.gb {
-	background: url('../images/thumb-gb.jpg');
+.GB {
+	background: url('../images/thumb-GB.jpg');
 }
 .lifetime {
 	background: url('../images/thumb-lifetime.jpg');
