--- a/css/styles.css
+++ b/css/styles.css
@@ -104,7 +104,7 @@ a:hover .linkbox {
 .rh {
 	background: url('../images/thumb-rh.jpg');
 }
-.LXR {
+.lxr {
 	background: url('../images/thumb-LXR.jpg');
 }
 .GB {
