--- a/update/css/styles.css
+++ b/update/css/styles.css
@@ -49,37 +49,19 @@ li {
 	color: white;
 }
 
+/* Middle */
+.banner-middle {
+	width: 100%;
+	height: auto;
+	position: relative;
+}
+.banner-middle button {
+	position: absolute;
+}
+
 
 /* Portfolio */
-.portfolio {
-	float: right;
-	padding-top: 15px;
-}
-.linkbox {
-	height: 150px;
-	width: 150px;
-	margin: 0 auto;
-	border-radius: 150px;
-	opacity: 0.75;
-}
-.portfolio .col-md-4 p {
-	color: white;
-	text-align: center;
-	padding: 10px 0 20px;
-	margin: 0;
-	font-weight: bold;
-}
-a:hover .linkbox {
-	opacity: 1;
-	transition: ease;
-	-webkit-box-shadow: 1px 2px 3px 0px rgba(26,26,26,0.5);
-	-moz-box-shadow: 1px 2px 3px 0px rgba(26,26,26,0.5);
-	box-shadow: 1px 2px 3px 0px rgba(26,26,26,0.5);
-	text-decoration: none;
-}
-a:hover .linkbox p {
-	text-decoration: none;
-}
+
 .century {
 	background: url('../images/thumb-century.jpg');
 }
