--- a/update/css/styles.css
+++ b/update/css/styles.css
@@ -95,15 +95,15 @@ li {
 
 /* Buttons */
 button {
-	background: white;
-	color: black;
-	font-weight: bold;
-	border: 2px solid white;
 	padding: 10px 45px;
+	background-color: #820d5b;
+	color: white;
+	border: 2px solid #820d5b;
 }
 button:hover {
-	background: black;
-	color: white;
+	background-color: white;
+	border-color: #820d5b;
+	color: #820d5b;
 }
 
 /* Footer */
