--- a/update/css/styles.css
+++ b/update/css/styles.css
@@ -24,7 +24,7 @@ a {
 	color: lightgrey;
 	text-decoration: none;
 }
-a:hover {
+a:hover, a:visited, a:focus {
 	text-decoration: none;
 }
 ul {
@@ -42,6 +42,11 @@ button {
 	background-color: black;
 	color: white;
 	border: 2px solid black;
+}
+button a,
+button a:visited,
+button a:focus {
+	color: white;
 }
 button:hover {
 	background-color: white;
