--- a/css/styles.css
+++ b/css/styles.css
@@ -121,6 +121,9 @@ a:hover .linkbox p {
 .lxr {
 	background: url('../images/thumb-LXR.jpg');
 }
+.expedia {
+	background: url('../images/thumb-expedia.jpg');
+}
 .GB {
 	background: url('../images/thumb-GB.jpg');
 }
