--- a/update/css/styles.css
+++ b/update/css/styles.css
@@ -6,7 +6,6 @@ body {
 	margin: 0;
 	padding: 0;
 }
-
 img {
 	max-width: 100%;
 }
@@ -57,47 +56,31 @@ button:hover {
 .black {
 	background-color: black;
 }
-
-.subbanner {
+.topbanner {
 	padding: 45px 0;
+	min-height: 350px;
 }
-.subbanner h1 {
+.topbanner h1 {
 	color: white;
 }
-
 h2 {
 	margin-top: 25px;
 }
 
-/* Middle */
-.banner-middle {
-	width: 100%;
-	height: auto;
-	position: relative;
-}
-.banner-middle button {
-	position: absolute;
-	padding: 10px 0;
-	top: 60px;
-	right: 20%;
-}
-.banner-middle button a {
-	padding: 10px 25px;
-}
-
 /* Portfolio */
-
+.portfolio {
+	background: url('../images/bk.jpg') no-repeat center;
+	background-size: cover;
+}
 .bubble {
 	margin-bottom: 15px;
 }
-
 .module {
     width: 200px;
     height: 200px;
     border-radius: 200px;
     margin: 15px auto;
 }
-
 .portfolio p {
 	text-align: center;
 	color: white;
@@ -132,6 +115,21 @@ h2 {
 }
 .vero {
 	background: url('../images/thumb-vero.jpg');
+}
+.expedia {
+	background: url('../images/thumb-expedia.jpg');
+}
+
+/* Featured Content */
+.featured-content {
+	width: 100%;
+	height: auto;
+	position: relative;
+	background-color: white;
+}
+.featured-content h2,
+.featured-content p {
+	color: black;
 }
 
 /* Footer */
@@ -208,9 +206,7 @@ li.social-tab:hover:after {
 		padding: 15px 35px;
 	}
 }
-
 @media (max-width: 991px) {
-
 }
 @media (max-width: 989px) {
 	.banner-middle button {
