--- a/update/css/styles.css
+++ b/update/css/styles.css
@@ -73,13 +73,39 @@ h2 {
 	background-size: cover;
 }
 .bubble {
-	margin-bottom: 15px;
+	background: black;
+    border-radius: 200px;
+    width: 200px;
+    height: 200px;
+    margin: 0 auto 15px;
 }
+.bubble p {
+	display: none;
+    position: absolute;
+    color: white;
+    left: 0;
+    right: 0;
+    text-align: center;
+    top: 100px;
+    text-transform: uppercase;
+    font-size: 20px;
+}
+.bubble:hover p {
+	display: block;
+}
+
 .module {
     width: 200px;
     height: 200px;
     border-radius: 200px;
     margin: 15px auto;
+    opacity: 1;
+   transition: opacity .25s ease-in-out;
+   -moz-transition: opacity .25s ease-in-out;
+   -webkit-transition: opacity .25s ease-in-out;
+}
+.module:hover {
+	opacity: 0;
 }
 .portfolio p {
 	text-align: center;
