--- a/update/css/styles.css
+++ b/update/css/styles.css
@@ -90,6 +90,9 @@ h2 {
     text-transform: uppercase;
     font-size: 20px;
 }
+.bubble.both p {
+	top: 85px;
+}
 .bubble:hover p {
 	display: block;
 }
