--- a/update/css/styles.css
+++ b/update/css/styles.css
@@ -65,7 +65,7 @@ button:hover {
     top: 0;
     left: 0;
     right: 0;
-    width: 100px;
+    width: 100%;
     height: 225px;
     background: black;
     -webkit-transform-origin: 0 100%;
