ready for go live

--- a/update/css/styles.css
+++ b/update/css/styles.css
@@ -35,21 +35,30 @@ ul {
 li {
 	text-decoration: none;
 }
+.marg {
+	margin-top: 35px;
+}
 
 /* Buttons */
 button {
-	background-color: black;
-	color: white;
+	background-color: white;
+	color: black;
 	border: 2px solid black;
+	padding: 10px 20px;
+	margin: 15px 0;
 }
 button a,
 button a:visited,
 button a:focus {
-	color: white;
+	color: black;
 }
 button:hover {
-	background-color: white;
-	color: black;
+	background-color: black;
+	color: white;
+}
+button a:hover,
+button:hover a {
+	color: white;
 }
 
 /* Content */
@@ -90,6 +99,7 @@ h2 {
 	background: url('../images/bk.jpg') no-repeat center;
 	background-size: cover;
 	padding-top: 135px;
+	padding-bottom: 35px;
 }
 .bubble {
 	background: black;
@@ -174,6 +184,7 @@ h2 {
 	height: auto;
 	position: relative;
 	background-color: white;
+	padding: 35px 0;
 }
 .featured-content h2,
 .featured-content p {
@@ -184,6 +195,15 @@ h2 {
 .current {
 	background: black;
 	min-height: 250px;
+	padding: 35px 0;
+}
+.current h2 {
+	color: white;
+	text-align: center;
+	margin: 10px 0 45px;
+}
+iframe.tumblr-embed.tumblr-embed-loaded {
+    margin-top: 0!important;
 }
 
 /* Footer */
@@ -224,6 +244,7 @@ li.social-tab:hover:after {
 }
 .github:after {
 	content: "\f09b";
+    padding: 3px 0 0 0;
 }
 .github:hover:after {
 	background-color: #24292e;
@@ -231,6 +252,7 @@ li.social-tab:hover:after {
 }
 .codepin:after {
 	content: "\f1cb";
+    padding: 3px 0 0 0;
 }
 .codepin:hover:after {
 	background-color: #000;
@@ -238,6 +260,7 @@ li.social-tab:hover:after {
 }
 .twitter:after {
 	content: "\f099";
+    padding: 4px 0 0 0;
 }
 .twitter:hover:after {
 	background-color: #5fa8dc;
@@ -245,6 +268,7 @@ li.social-tab:hover:after {
 }
 .tumblr:after {
 	content: "\f173";
+    padding: 4px 0 0 0;
 }
 .tumblr:hover:after {
 	background-color: #35465c;
@@ -261,6 +285,42 @@ li.social-tab:hover:after {
 	}
 }
 @media (max-width: 991px) {
+	.bubble {
+		background: none;
+	    width: 100%;
+    	height: auto;
+    	margin: 35px 0 0 0;
+	}
+	.bubble p,
+	.bubble.both p {
+		position: relative;
+		display: block;
+		top: 0;
+	}
+	.module:hover {
+		opacity: 1;
+	}
+	.main {
+		display: flex;
+		flex-direction: column;
+	}
+	.feature {
+		order: 1;
+		padding-top: 100px;
+	}
+	.portfolio {
+		order: 2;
+		padding-top: 35px;
+	}
+	.currently {
+		order: 3;
+	}
+	footer {
+		order: 4;
+	}
+	.current .col-md-6 {
+		margin-top: 35px;
+	}
 }
 @media (max-width: 989px) {
 	.banner-middle button {
