--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,11 @@
 body {
 	font-family: 'Open Sans', Helvetica, Arial, sans-serif;
 	font-size: 13px;
-	color: #454545;
+	color: #333;
 	background-color: white;
 	margin: 0;
 	padding: 0;
-	background: url('../images/bk.jpg') no-repeat center center fixed;
-	background-size: cover;
 }
-
 img {
 	max-width: 100%;
 }
@@ -23,10 +20,10 @@ p {
 	margin-bottom: 15px;
 }
 a {
-	color: grey;
+	color: lightgrey;
 	text-decoration: none;
 }
-a:hover {
+a:hover, a:visited, a:focus {
 	text-decoration: none;
 }
 ul {
@@ -38,74 +35,115 @@ ul {
 li {
 	text-decoration: none;
 }
+.marg {
+	margin-top: 35px;
+}
+
+/* Buttons */
+button {
+	background-color: white;
+	color: black;
+	border: 2px solid black;
+	padding: 10px 20px;
+	margin: 15px 0;
+}
+button a,
+button a:visited,
+button a:focus {
+	color: black;
+}
+button:hover {
+	background-color: black;
+	color: white;
+}
+button a:hover,
+button:hover a {
+	color: white;
+}
 
 /* Content */
-.main { 
-  display: table;
-  width: 100%;
+.topbanner {
+	padding: 45px 0;
+    width: 100%;
+    display: table;
+    position: relative;
 }
-.content { 
-  display: table-row; 
-  height: 100%;
-  float: left;
-  width: 50%;
-}
-.content-body { 
-  display: table-cell;
-}
-.left-block {
-	padding: 25px 80px 25px 25px;
-}
-.left-block:after {
-	content: '';
+.topbanner:after {
+    content: '';
     position: absolute;
     top: 0;
     left: 0;
-    width: 50%;
-    height: 100%;
+    right: 0;
+    width: 100%;
+    height: 225px;
     background: black;
-    -webkit-transform-origin: 100% 0;
-    -ms-transform-origin: 100% 0;
-    transform-origin: 100% 0;
-    -webkit-transform: skew(-15deg);
-    -ms-transform: skew(-15deg);
-    transform: skew(-15deg);
-    z-index: -1;
-}
-.left-block h1, .left-block p {
+    -webkit-transform-origin: 0 100%;
+	-ms-transform-origin: 0 100%;
+	transform-origin: 0 100%;
+	-webkit-transform: skewY(-4deg);
+	-ms-transform: skewY(-4deg);
+	transform: skewY(-4deg);
+    z-index: 1;
+ }
+.topbanner h1 {
 	color: white;
+	z-index: 9;
+    position: absolute;
+}
+h2 {
+	margin-top: 25px;
 }
 
 /* Portfolio */
 .portfolio {
-	float: right;
-	padding-top: 15px;
+	background: url('../images/bk.jpg') no-repeat center;
+	background-size: cover;
+	padding-top: 135px;
+	padding-bottom: 35px;
 }
-.linkbox {
-	height: 150px;
-	width: 150px;
-	margin: 0 auto;
-	border-radius: 150px;
-	opacity: 0.75;
+.bubble {
+	background: black;
+    border-radius: 200px;
+    width: 200px;
+    height: 200px;
+    margin: 0 auto 15px;
 }
-.portfolio .col-md-4 p {
-	color: white;
+.bubble p {
+	display: none;
+    position: absolute;
+    color: white;
+    left: 0;
+    right: 0;
+    text-align: center;
+    top: 100px;
+    text-transform: uppercase;
+    font-size: 20px;
+}
+.bubble.both p {
+	top: 85px;
+}
+.bubble:hover p {
+	display: block;
+}
+
+.module {
+    width: 200px;
+    height: 200px;
+    border-radius: 200px;
+    margin: 15px auto;
+    opacity: 1;
+   transition: opacity .25s ease-in-out;
+   -moz-transition: opacity .25s ease-in-out;
+   -webkit-transition: opacity .25s ease-in-out;
+}
+.module:hover {
+	opacity: 0;
+}
+.portfolio p {
 	text-align: center;
-	padding: 10px 0 20px;
-	margin: 0;
-	font-weight: bold;
+	color: white;
 }
-a:hover .linkbox {
-	opacity: 1;
-	transition: ease;
-	-webkit-box-shadow: 1px 2px 3px 0px rgba(26,26,26,0.5);
-	-moz-box-shadow: 1px 2px 3px 0px rgba(26,26,26,0.5);
-	box-shadow: 1px 2px 3px 0px rgba(26,26,26,0.5);
-	text-decoration: none;
-}
-a:hover .linkbox p {
-	text-decoration: none;
-}
+
 .century {
 	background: url('../images/thumb-century.jpg');
 }
@@ -120,9 +158,6 @@ a:hover .linkbox p {
 }
 .lxr {
 	background: url('../images/thumb-LXR.jpg');
-}
-.expedia {
-	background: url('../images/thumb-expedia.jpg');
 }
 .GB {
 	background: url('../images/thumb-GB.jpg');
@@ -139,23 +174,44 @@ a:hover .linkbox p {
 .vero {
 	background: url('../images/thumb-vero.jpg');
 }
-
-/* Buttons */
-button {
-	background: white;
-	color: black;
-	font-weight: bold;
-	border: 2px solid white;
-	padding: 10px 45px;
+.expedia {
+	background: url('../images/thumb-expedia.jpg');
 }
-button:hover {
+
+/* Featured Content */
+.featured-content {
+	width: 100%;
+	height: auto;
+	position: relative;
+	background-color: white;
+	padding: 35px 0;
+}
+.featured-content h2,
+.featured-content p {
+	color: black;
+}
+
+/* Current */
+.current {
 	background: black;
+	min-height: 250px;
+	padding: 35px 0;
+}
+.current h2 {
 	color: white;
+	text-align: center;
+	margin: 10px 0 45px;
+}
+iframe.tumblr-embed.tumblr-embed-loaded {
+    margin-top: 0!important;
 }
 
 /* Footer */
 footer {
-	padding-left: 25px;
+	width: 100%;
+	background-color: grey;
+	text-align: center;
+	padding: 40px 0;
 }
 
 /* Social */
@@ -188,7 +244,7 @@ li.social-tab:hover:after {
 }
 .github:after {
 	content: "\f09b";
-    padding: 3px 0 0 8px;
+    padding: 3px 0 0 0;
 }
 .github:hover:after {
 	background-color: #24292e;
@@ -196,7 +252,7 @@ li.social-tab:hover:after {
 }
 .codepin:after {
 	content: "\f1cb";
-    padding: 3px 0 0 6px;
+    padding: 3px 0 0 0;
 }
 .codepin:hover:after {
 	background-color: #000;
@@ -204,7 +260,7 @@ li.social-tab:hover:after {
 }
 .twitter:after {
 	content: "\f099";
-    padding: 4px 0 0 8px;
+    padding: 4px 0 0 0;
 }
 .twitter:hover:after {
 	background-color: #5fa8dc;
@@ -212,78 +268,81 @@ li.social-tab:hover:after {
 }
 .tumblr:after {
 	content: "\f173";
-    padding: 4px 0 0 10px;
+    padding: 4px 0 0 0;
 }
 .tumblr:hover:after {
 	background-color: #35465c;
 	cursor: pointer;
 }
 
-@media (max-width: 991px) {
-	.headline {
-	    background-size: 100%;
-	    background-position-y: 100px;
-	    background-repeat: no-repeat;
-	    height: 350px;
+@media (min-width: 1200px) {
+	.banner-middle button {
+		padding: 15px 0;
+		right: 22%;
 	}
-	.content {
-	    display: block;
-	    height: auto;
+	.banner-middle button a {
+		padding: 15px 35px;
+	}
+}
+@media (max-width: 991px) {
+	.bubble {
+		background: none;
 	    width: 100%;
-	    float: none;
+    	height: auto;
+    	margin: 35px 0 0 0;
+	}
+	.bubble p,
+	.bubble.both p {
+		position: relative;
+		display: block;
+		top: 0;
+	}
+	.module:hover {
+		opacity: 1;
+	}
+	.main {
+		display: flex;
+		flex-direction: column;
+	}
+	.feature {
+		order: 1;
+		padding-top: 100px;
 	}
 	.portfolio {
-		float: none;
+		order: 2;
+		padding-top: 35px;
 	}
-	.linkbox {
-		margin: 15px auto;
-	}
-	.left-block {
-		padding-right: 40px;
-	}
-	.left-block:after {
-		width: 100%;
-		height: 400px;
-		-webkit-transform-origin: 0 100%;
-		-ms-transform-origin: 0 100%;
-		transform-origin: 0 100%;
-		-webkit-transform: skewY(-10deg);
-		-ms-transform: skewY(-10deg);
-		transform: skewY(-10deg);
-	}
-	.content-body {
-	    display: block;
-	    min-height: 380px;
+	.currently {
+		order: 3;
 	}
 	footer {
-		clear: both;
-		padding: 0;
-		margin-top: 40px;
+		order: 4;
 	}
-	ul.social-tabs {
-		text-align: center;
+	.current .col-md-6 {
+		margin-top: 35px;
 	}
-	.github:after {
-		padding: 3px 0 0 1px;
-	}
-	.codepin:after {
-		padding: 3px 0 0 0;
-	}
-	.twitter:after {
-    		padding: 4px 0 0 2px;
-	}
-	.tumblr:after {
-    		padding: 4px 0 0 0px;
+}
+@media (max-width: 989px) {
+	.banner-middle button {
+		top: 45px;
+		right: 16%;
 	}
 }
 @media (max-width: 700px) {
-	.headline {
-	    background-position-y: 135px;
-	    margin: 0;
+	.banner-middle {
+		text-align: center;
+	}
+	.banner-middle button {
+		position: relative;
+		right: 0;
+		top: 0;
+		width: calc(100% - 30px);
+		margin: 25px auto;
+	}
+	h1 {
+		font-size: 28px;
+		line-height: 1.25;
 	}
 }
 @media (max-width: 525px) {
-	.headline {
-	    background-position-y: 210px;
-	}
 }
