Replacing legacy with ipf

--- a/css/styles.css
+++ b/css/styles.css
@@ -167,6 +167,9 @@ h2 {
 .legacy {
 	background: url('../images/thumb-legacy.jpg');
 }
+.ipf {
+	background: url('../images/thumb-ipf.jpg');
+}
 .ashville {
 	background: url('../images/thumb-ashville.jpg');
 }
